--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,7 +13,7 @@
   <script src="{{ url_for('static', filename='js/popup.js') }}" defer></script>
 </head>
 
-<body>
+<body class="">
   <header>
     <div class="menu">
       <div class="menu_right">
@@ -68,47 +68,6 @@
         </div>
         {{ form.submit(class="submit_button_mobile") }}
       </form>
-     
-      <div class="pop-up" id="pop-up_window">
-        <h2 class="pop-up_title">
-          Get A Cash Offer For Your Home Today!
-        </h2>
-        <form action="/" class="pop-up_form">
-          {{ form.hidden_tag()}}
-          <div class="pop-up_input-wrapper">
-            <label class="pop-up_label" for="">Property Address</label>
-            <!-- <input class="pop-up_input" type="text" placeholder="The home you wish to sell"> -->
-            {{ form_popup.address(class="pop-up_input", placeholder="The home you wish to sell", id="pop-up-form_input-address") }}
-          </div>
-          <div class="pop-up_input-wrapper">
-            <label class="pop-up_label" for="">First Name</label>
-            <!-- <input class="pop-up_input" type="text" placeholder="Your name"> -->
-            {{ form_popup.first_name(class="pop-up_input", placeholder="Your name") }}
-          </div>
-          <div class="pop-up_input-wrapper">
-            <label class="pop-up_label" for="">Last Name</label>
-            <!-- <input class="pop-up_input" type="text" placeholder="Your last name"> -->
-            {{ form_popup.last_name(class="pop-up_input", placeholder="Your last name") }}
-          </div>
-          <div class="pop-up_input-wrapper">
-            <label class="pop-up_label" for="">Phone Number</label>
-            <!-- <input class="pop-up_input" type="tel" placeholder="Best number to reach you out"> -->
-            {{ form_popup.number(class="pop-up_input", placeholder="Best number to reach you out", ) }}
-          </div>
-          <div class="pop-up_input-wrapper">
-            <label class="pop-up_label pop-up_required-field" for="">Email</label>
-            <!-- <input class="pop-up_input" type="email" placeholder="Best email to reach you out"> -->
-            {{ form_popup.email(class="pop-up_input", placeholder="Best email to reach you out", id="pop-up-form_input-number") }}
-          </div>
-          <div class="pop-up_input-wrapper">
-            <label class="pop-up_label pop-up_required-field" for="">Message</label>
-            <!-- <input class="pop-up_input" type="text" placeholder="Tell us how can we help"> -->
-            {{ form_popup.message(class="pop-up_input", placeholder="Tell us how can we help") }}
-          </div>
-          <button class="pop-up_button" id="pop-up_button">Submit</button>
-        </form>
-      </div>
-
     </div>
     <div id="how_it_works" class="white_boxes_wrapper">
       <div class="white_box box_submit">
@@ -140,6 +99,59 @@
       </div>
     </div>
   </header>
+
+  <div class="pop-up" id="pop-up_window">
+    <div class="pop-up_terms">
+      <p class="pop-up_terms-description">
+        By filling out the form below and pressing "Submit" you are directly consenting to receiving test messages, calls
+        and emails related to calls, offers or related information about the address which you have provided, allowing John
+        or Spence of John and Spence buy houses or affiliated parties and non affiliated to reach out to directly. Message
+        and Data Rates May Apply. Message Frequency May Vary.
+      </p>
+      <div class="pop-up_terms-links">
+        <a href="" class="pop-up_terms-link">
+          Terms and Conditions
+        </a>
+        <a href="" class="pop-up_terms-link">
+          Privacy Policy
+        </a>
+      </div>
+    </div>
+    <form action="/" class="pop-up_form">
+      {{ form.hidden_tag()}}
+      <div class="pop-up_input-wrapper">
+        <label class="pop-up_label" for="">Property Address</label>
+        <!-- <input class="pop-up_input" type="text" placeholder="The home you wish to sell"> -->
+        {{ form_popup.address(class="pop-up_input", placeholder="The home you wish to sell", id="pop-up-form_input-address") }}
+      </div>
+      <div class="pop-up_input-wrapper">
+        <label class="pop-up_label" for="">First Name</label>
+        <!-- <input class="pop-up_input" type="text" placeholder="Your name"> -->
+        {{ form_popup.first_name(class="pop-up_input", placeholder="Your name") }}
+      </div>
+      <div class="pop-up_input-wrapper">
+        <label class="pop-up_label" for="">Last Name</label>
+        <!-- <input class="pop-up_input" type="text" placeholder="Your last name"> -->
+        {{ form_popup.last_name(class="pop-up_input", placeholder="Your last name") }}
+      </div>
+      <div class="pop-up_input-wrapper">
+        <label class="pop-up_label" for="">Phone Number</label>
+        <!-- <input class="pop-up_input" type="tel" placeholder="Best number to reach you out"> -->
+        {{ form_popup.number(class="pop-up_input", placeholder="Best number to reach you out", ) }}
+      </div>
+      <div class="pop-up_input-wrapper">
+        <label class="pop-up_label pop-up_required-field" for="">Email</label>
+        <!-- <input class="pop-up_input" type="email" placeholder="Best email to reach you out"> -->
+        {{ form_popup.email(class="pop-up_input", placeholder="Best email to reach you out", id="pop-up-form_input-number") }}
+      </div>
+      <div class="pop-up_input-wrapper">
+        <label class="pop-up_label pop-up_required-field" for="">Message</label>
+        <!-- <input class="pop-up_input" type="text" placeholder="Tell us how can we help"> -->
+        {{ form_popup.message(class="pop-up_input", placeholder="Tell us how can we help") }}
+      </div>
+      <button class="pop-up_button" id="pop-up_button">Submit</button>
+    </form>
+  </div>
 
   <div id="how_it_works_mobile" class="white_boxes_wrapper_mobile">
     <div class="white_box_mobile box_submit">
