--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -137,7 +137,7 @@
       <div class="pop-up_input-wrapper">
         <label class="pop-up_label" for="">Phone Number</label>
         <!-- <input class="pop-up_input" type="tel" placeholder="Best number to reach you out"> -->
-        {{ form_popup.number(class="pop-up_input", placeholder="Best number to reach you out", ) }}
+        {{ form_popup.phone(class="pop-up_input", placeholder="Best number to reach you out", ) }}
       </div>
       <div class="pop-up_input-wrapper">
         <label class="pop-up_label pop-up_required-field" for="">Email</label>
