--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -9,8 +9,6 @@ body {
 header {
     width: 100%;
     position: relative;
-   
-    /* TODO height = 980px */
     height: 980px; 
     background-image: url(../img/header.png);
     background-position: center top;
@@ -66,8 +64,6 @@ header {
 
 .transparent_card {
     width: 970px;
-
-    /* TODO heigth 472px */
     height: 472px;
     position: absolute;
     top: 178px;
@@ -170,23 +166,22 @@ header {
 /* POP-UP FORM */
 
 /* Class to focus only Pop Up  window */
-
 .blur > *:not(.pop-up){
    filter: blur(2px) brightness(0.5);
 }
 
-
 .pop-up {
+    box-sizing: border-box;
     display: none;
     position: fixed;
     z-index: 999;
     top: 178px;
     left: 50%;
     transform: translateX(-50%);
-    box-sizing: border-box;
     width: 972px;
     height: 950px;
     padding: 71px 160px 88px;
+
     font-family: "Montserrat";
     color: white;
     background-image: url(../img/pop_up.png);
@@ -220,11 +215,11 @@ header {
 
 .pop-up_title {
     margin-bottom: 57px;
-    text-align: center;
-    color: white;
     font-family: "Montserrat";
     font-size: 40px;
     line-height: 49px;
+    text-align: center;
+    color: white;
 }
 
 .pop-up_form {
@@ -233,10 +228,10 @@ header {
     display: flex;
     flex-direction: column;
     gap: 24px;
-    color: white;
     font-family: "Montserrat";
     font-weight: 400;
     font-size: 16px;
+    color: white;
 }
 
 .pop-up_required-field {
@@ -934,6 +929,50 @@ footer {
     }
 
     .footer_left_description {
+        text-align: center;
+    }
+
+    .pop-up {
+        top: 57px;
+        width: 350px;
+        height: auto;
+        padding: 10px 18px 20px;
+    }
+
+    .pop-up_terms {
+        margin-bottom: 32px;
+        padding: 5px 5px 25px;
+    }
+
+    .pop-up_form {
+        width: 100%;
+        gap: 17px;
+    }
+
+    .pop-up_label {
+        height: 1px;
+        visibility: hidden;
+    }
+
+    .pop-up_required-field {
+        position: relative;
+    }
+
+    .pop-up_required-field::before {
+        top: -3px;
+        left: 3px;
+        visibility: visible;
+        content: '*';
+        position: absolute;
+        color: #ffa629;
+    }
+
+    .pop-up_input {
+        position: relative;
+    }
+
+    .pop-up_input::placeholder {
+        position: relative;
         text-align: center;
     }
 }
