pop up position was changed to absolute and scroll to lower buton was added

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -171,7 +171,7 @@ header {
 .pop-up {
     box-sizing: border-box;
     display: none;
-    position: fixed;
+    position: absolute;
     z-index: 999;
     top: 178px;
     left: 50%;
