--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -485,7 +485,7 @@
           <img class="phone_icon_mobile" src="{{ url_for('static', filename='img/phone_icon.png') }}" alt="phone_icon">
           {{ form.phone(class="phone_input_mobile contact-form_input-number", placeholder="Phone number") }}
         </div>
-        <button type="button" class="submit_button_mobile get-my-offer_button">Get my offer</button>
+        <button type="button" class="submit_button_mobile get-my-offer_button" id="get-my-offer_button-bottom">Get my offer</button>
       </form>
     </div>
   </footer>
