pop up position was changed to absolute and scroll to lower buton was added update

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -173,7 +173,7 @@ header {
     display: none;
     position: absolute;
     z-index: 999;
-    top: 178px;
+    top: 0;
     left: 50%;
     transform: translateX(-50%);
     width: 972px;
