text in terms description was changed

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -103,8 +103,8 @@
     <div class="pop-up_terms">
       <p class="pop-up_terms-description">
         By filling out the form below and pressing "Submit" you are directly consenting to receiving test messages, calls
-        and emails related to calls, offers or related information about the address which you have provided, allowing John
-        or Spence of John and Spence buy houses or affiliated parties and non affiliated to reach out to directly. Message
+        and emails related to calls, offers or related information about the address which you have provided, allowing Real
+        Neighborhood Offer buy houses or affiliated parties and non affiliated to reach out to directly. Message
         and Data Rates May Apply. Message Frequency May Vary.
       </p>
       <div class="pop-up_terms-links">
