--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -170,7 +170,8 @@ header {
 
 .pop-up {
     box-sizing: border-box;
-    display: none;
+    /* TODO change to none */
+    display: fixed;
     position: absolute;
     z-index: 999;
     top: 0;
@@ -191,7 +192,7 @@ header {
 
 .pop-up_terms {
     margin-bottom: 57px;
-    padding: 5px 5px 25px;
+    padding: 5px 8px 25px;
     font-size: 12px;
     background-color: rgba(0, 0, 0, 0.2);
 }
@@ -200,11 +201,79 @@ header {
     margin-bottom: 25px;
 }
 
+
+.pop-up_terms-checkbox {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    top: 158px;
+    left: 197px;
+}
+
+.pop-up_terms-checkbox-optin {
+    margin: 0 0 5px;
+}
+
+.pop-up_terms-checkbox-input {
+    height: 20px;
+    display: inline-flex;
+    align-items: center;
+    position: relative;
+    cursor: pointer;
+}
+
+.pop-up_terms-checkbox-input > label {
+    color: #fff;
+    padding: 0.5rem 0.25rem;
+}
+
+.pop-up_terms-checkbox-input > input {
+    height: 15px;
+    width: 15px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -o-appearance: none;
+    appearance: none;
+    border: 1px solid #fff;
+    border-radius: 4px;
+    outline: none;
+    transition-duration: 0.3s;
+    background-color: transparent;
+    cursor: pointer;
+  }
+
+.pop-up_terms-checkbox-input > input:checked {
+    border: 1px solid #fff;
+    background-color: transparent;
+}
+
+.pop-up_terms-checkbox-input > input:checked + label::before {
+    content: '\2713';
+    display: block;
+    text-align: center;
+    color: #fff;
+    position: absolute;
+    left: 6px;
+    top: -3px;
+    /* transform: translate(-50% -50%); */
+}
+
+.pop-up_terms-checkbox-input > input:active {
+    border: 2px solid #fff;
+}
+
+.pop-up_terms-container {
+    display: flex;
+    justify-content: center;
+}
+
 .pop-up_terms-links {
+    margin: auto;
     display: flex;
     justify-content: center;
     gap: 20px;
-}
+  }
 
 .pop-up_terms-link {
     font-size: 16px;
@@ -940,6 +1009,20 @@ footer {
     .pop-up_terms {
         margin-bottom: 32px;
         padding: 5px 5px 25px;
+    }
+
+    .pop-up_terms-checkbox {
+        top: 198px;
+        left: 27px;
+        display: flex;
+        flex-direction: column;
+        font-size: 15px;
+    }
+
+    .pop-up_terms-links {
+        flex-direction: column;
+        align-items: center;
+        gap: 5px;
     }
 
     .pop-up_form {
